--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
   "license": "MIT",
-  "version": "1.1.1",
+  "version": "0.0.1",
   "type": "commonjs",
-  "name": "astrohelm-workspace",
+  "name": "astrocore",
   "homepage": "https://astrohelm.ru",
-  "description": "Astrohelm workspace example",
+  "description": "Astrocore",
   "author": "Alexander Ivanov <sashapop101@gmail.com>",
-  "keywords": [
-    "nodejs",
-    "zero-dependencies",
-    "prettier",
-    "eslint",
-    "ts",
-    "workspace",
-    "example",
-    "preset",
-    "starter-kit",
-    "astrohelm",
-    "javascript",
-    "typescript"
-  ],
+  "keywords": [],
 
   "main": "index.js",
   "types": "types/index.d.ts",
@@ -30,15 +17,15 @@
   "files": ["/dist", "/lib", "/types"],
 
   "scripts": {
-    "test": "node --test && tsc",
+    "test": "node --test",
     "dev": "node index.js",
     "prettier:fix": "prettier --write \"**/*.{js,ts,json,html,cjs,md,yaml}\"",
     "eslint:fix": "eslint --fix \"**/*.{js,ts}\""
   },
 
-  "repository": { "type": "git", "url": "git+https://github.com/astrohelm/workspace.git" },
+  "repository": { "type": "git", "url": "git+https://github.com/astrohelm/astrocore.git" },
   "bugs": {
-    "url": "https://github.com/astrohelm/workspace/issues",
+    "url": "https://github.com/astrohelm/astrocore/issues",
     "email": "sashapop101@gmail.com"
   },
 
