--- a/package.json
+++ b/package.json
@@ -7,28 +7,33 @@
   "description": "Astrocore",
   "author": "Alexander Ivanov <sashapop101@gmail.com>",
   "keywords": [],
-
   "main": "index.js",
   "types": "types/index.d.ts",
   "packageManager": "npm@9.6.4",
   "readmeFilename": "README.md",
-  "engines": { "node": "18 || 19 || 20" },
+  "engines": {
+    "node": "18 || 19 || 20"
+  },
   "browser": {},
-  "files": ["/dist", "/lib", "/types"],
-
+  "files": [
+    "/dist",
+    "/lib",
+    "/types"
+  ],
   "scripts": {
     "test": "node --test",
     "dev": "node index.js",
     "prettier:fix": "prettier --write \"**/*.{js,ts,json,html,cjs,md,yaml}\"",
     "eslint:fix": "eslint --fix \"**/*.{js,ts}\""
   },
-
-  "repository": { "type": "git", "url": "git+https://github.com/astrohelm/astrocore.git" },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/astrohelm/astrocore.git"
+  },
   "bugs": {
     "url": "https://github.com/astrohelm/astrocore/issues",
     "email": "sashapop101@gmail.com"
   },
-
   "devDependencies": {
     "@types/node": "^20.5.3",
     "eslint": "^8.40.0",
@@ -38,5 +43,10 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.2",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "astroctx": "^1.0.0",
+    "astropack": "^0.2.0",
+    "astrowatch": "^1.0.0"
   }
 }
